--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.5.2
+certifi==2022.6.15
+charset-normalizer==2.1.0
 Django==4.0.5
 django-crispy-forms==1.14.0
+django-embed-video==1.4.4
+idna==3.3
 Pillow==9.1.1
+requests==2.28.1
 sqlparse==0.4.2
+urllib3==1.26.10
