--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.1.0
 Django==4.0.5
 django-crispy-forms==1.14.0
 django-embed-video==1.4.4
+django-storages==1.12.3
 idna==3.3
 Pillow==9.1.1
 requests==2.28.1
