--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.5.2
+boto3==1.24.31
+botocore==1.27.31
 certifi==2022.6.15
 charset-normalizer==2.1.0
 Django==4.0.5
@@ -6,7 +8,11 @@ django-crispy-forms==1.14.0
 django-embed-video==1.4.4
 django-storages==1.12.3
 idna==3.3
+jmespath==1.0.1
 Pillow==9.1.1
+python-dateutil==2.8.2
 requests==2.28.1
+s3transfer==0.6.0
+six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.10
